Springboot data REST added, DummyDBDatenadded, noch kein React

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#added 17.11.2020, because web UI will be hosted on default path, this one needs to be changed
+spring.data.rest.base-path=/api
 
 #spring.jpa.show-sql= true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
