--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		   <!-- https://mvnrepository.com/artifact/com.github.eirslett/frontend-maven-plugin -->
+		<dependency>
+    		<groupId>com.github.eirslett</groupId>
+    		<artifactId>frontend-maven-plugin</artifactId>
+    		<version>1.10.3</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -92,10 +99,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 		<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
-		</plugin>
+		</plugin>-->
+		
+		
 		</plugins>
 	</build>
 
